# NBV-Simulation

./: .gitmodules  Advancement.md  CMakeLists.txt  DefaultConfiguration.yaml  README.md  exploit_results_real2.ipynb  requirements.txt  run.sh  run3.py  run_multiple_default.py  run_one_for_iterative_rec.py
3d_models/: Armadillo.qlt  Armadillo.txt
Metrics_computation/: Intrinsic_metrics.py  graph.py  main.py  requirements.txt  utils.py
Python_blender_API/: load_render_abc.py  main.py  obj_parser.py  quality_patches.py  requirements.txt  rescale_obj.py
nbv_simulation/: Information.cpp  Information.h  Information.hpp  MCMF.cpp  MCMF.h  NBV_Planner.cpp  NBV_Planner.h  Perception_3D.cpp  Perception_3D.h  Ray.cpp  Ray.h  Ray_Hash.cpp  Ray_Hash.h  Ray_Information.cpp  Ray_Information.h  Share_Data.cpp  Share_Data.h  Share_Data.hpp  View.cpp  View.h  View_Space.cpp  View_Space.h  View_Space.hpp  Views_Information.cpp  Views_Information.h  Visual.cpp  Visual.h  Voxel_Information.cpp  Voxel_Information.h  main.cpp  utils.cpp  views_voxels_MF.cpp  views_voxels_MF.h
